--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
+    "classnames": "^2.2.5",
     "downshift": "^1.31.10",
     "mapbox-gl": "^0.44.2",
     "material-ui": "^1.0.0-beta.42",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
