--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
+    "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "downshift": "^1.31.10",
     "mapbox-gl": "^0.44.2",
@@ -13,7 +14,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-mapbox-gl": "^3.8.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "socket.io-client": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
